--- a/ui/common/css/abstract/_variables.scss
+++ b/ui/common/css/abstract/_variables.scss
@@ -5,12 +5,7 @@ $img-path: '../images';
 
 $viewport-min-width: 320px;
 
-$block-gap: 1.5vmin;
-$block-gap-half: 1vmin;
-
-$block-gap-h: 1.5vh;
-$block-gap-w: 1.5vw;
-$block-gap-w-half: 1vw;
+$block-gap: var(--block-gap);
 
 $box-radius-size: 5px;
 $box-padding-vert: 5vh;
